# NUWebots

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  b  nugus_controller_test  requirements.txt
.buildkite/: pipeline.yml
.buildkite/scripts/: validate_clang_format.sh
cmake/: CompilerWarnings.cmake
cmake/Modules/: Findwebots.cmake
controllers/: CMakeLists.txt
controllers/NUgus_Controller/: CMakeLists.txt  Makefile  NUgus_Client_Test.cpp  NUgus_Controller.cpp  RobotControl.proto  tcp.cpp  tcp.hpp
controllers/Voronoi_Controller/: CMakeLists.txt
controllers/collect_vision_data/: CMakeLists.txt  collect_vision_data  collect_vision_data.cpp  config_REFERENCE.yaml
controllers/darwin_controller/: darwin_controller
controllers/nugus_controller/: CMakeLists.txt  RobotControl.proto  messages.proto  nugus_controller  nugus_controller.cpp  nugus_controller_test.cpp
controllers/optimisation/: CMakeLists.txt  optimisation  optimisation.cpp
controllers/teleport_controller/: CMakeLists.txt  Makefile  config.yaml  teleport_controller  teleport_controller.cpp
controllers/teleport_master_controller/: CMakeLists.txt  README  README.txt  config.yaml  teleport_master_controller  teleport_master_controller.cpp
controllers/vision_teleport_controller/: CMakeLists.txt  README.md  vision_teleport_controller  vision_teleport_controller.cpp  vision_teleport_controller.yaml
controllers/vision_test/: CMakeLists.txt  vision_test  vision_test.cpp
controllers/voronoi_controller/: CMakeLists.txt  voronoi_controller  voronoi_controller.cpp
docker/: Dockerfile
nuwebots/: CMakeLists.txt
nuwebots/cmake/Modules/: Findwebots.cmake
nuwebots/controllers/: CMakeLists.txt
nuwebots/controllers/collect_vision_data/: collect_vision_data
nuwebots/controllers/nugus_controller/: CMakeLists.txt  nugus_controller  nugus_controller.cpp
nuwebots/controllers/teleport_controller/: CMakeLists.txt  teleport_controller
nuwebots/controllers/teleport_master_controller/: teleport_master_controller
nuwebots/controllers/vision_teleport_controller/: CMakeLists.txt  README.md  vision_teleport_controller.cpp
nuwebots/nuoptimiser/: .gitignore  Makefile
nuwebots/protos/: RobocupGoal.proto  RobocupSoccerBall.proto  RobocupSoccerField.proto
nuwebots/protos/robot/: Darwin-opHinge2Seg.proto  RobotisOp3.proto
nuwebots/scripts/: build.py
nuwebots/shared/message/: messages.proto
nuwebots/worlds/: .kid.wbproj  .vision_collection.wbproj  kid.wbt  robocup_nuoptim.wbt  vision_collection.wbt
protos/: JerseyFront.proto  NUgus.proto  NUgus.urdf  RobocupGoal.proto  RobocupSoccerBall.proto  RobocupSoccerField.proto  RobocupTexturedSoccerBall.proto  RobotisJerseyBack.proto  RobotisJerseyFront.proto  WhiteGrass.proto
protos/mesh/: NUgus_left_lower_legMesh.proto  NUgus_left_shoulderMesh.proto
protos/robocup_field/: RobocupGoal.proto  RobocupSoccerField.proto  RobocupTexturedSoccerBall.proto
protos/robot/: Darwin-op.proto  Darwin-opHinge2Seg.proto  JerseyBack.proto  NUgus.proto  RobotisOp3.proto  Wolfgang.proto
protos/robot/NUgus/: NUgus.proto  README.md  postures.json
protos/robot/NUgus_mesh/: NUgus_headMesh.proto  NUgus_left_ankleMesh.proto  NUgus_left_footMesh.proto  NUgus_left_hip_rollMesh.proto  NUgus_left_hip_yawMesh.proto  NUgus_left_lower_armMesh.proto  NUgus_left_shoulderMesh.proto  NUgus_left_upper_armMesh.proto  NUgus_left_upper_legMesh.proto  NUgus_neckMesh.proto  NUgus_right_ankleMesh.proto  NUgus_right_footMesh.proto  NUgus_right_hip_rollMesh.proto  NUgus_right_hip_yawMesh.proto  NUgus_right_lower_armMesh.proto  NUgus_right_lower_legMesh.proto  NUgus_right_shoulderMesh.proto  NUgus_right_upper_armMesh.proto  NUgus_right_upper_legMesh.proto  NUgus_torsoMesh.proto
protos/robot/Wolfgang/: README.md  Wolfgang.proto  WolfgangRobocup.proto
protos/robot/Wolfgang_textures/: WolfgangMarker.proto
protos/robot/nugus/: README.md  clean.py  config.json  generate_proto.py  head_collision.stl  head_visual.stl  left_ankle_collision.stl  left_ankle_visual.stl  left_foot_collision.stl  left_foot_visual.stl  left_hip_roll_collision.stl  left_hip_roll_visual.stl  left_hip_yaw_collision.stl  left_hip_yaw_visual.stl  left_lower_arm_visual.stl  left_lower_leg_visual.stl  left_shoulder_collision.stl  left_shoulder_visual.stl  left_upper_arm_collision.stl  left_upper_arm_visual.stl  left_upper_leg_collision.stl  left_upper_leg_visual.stl  neck_collision.stl  neck_visual.stl  nugus.proto  right_ankle_visual.stl  right_foot_collision.stl  right_foot_visual.stl  right_hip_roll_collision.stl  right_hip_roll_visual.stl  right_hip_yaw_collision.stl  right_hip_yaw_visual.stl  right_lower_arm_visual.stl  right_lower_leg_visual.stl  right_shoulder_collision.stl  right_shoulder_visual.stl  right_upper_arm_visual.stl  right_upper_leg_collision.stl  right_upper_leg_visual.stl  robot.urdf  (+2 more)
protos/robotstadium_humanoid/protos/: RobotstadiumSoccerFieldHumanoid.proto
robocup/: game.json
scripts/: b.py  build.py  configure.py  controller.py  create_controller.py  format.py
scripts/headless/: build.py  run.py
shared/message/: CMakeLists.txt  RobotControl.proto  messages.proto
shared/utility/: tcp.hpp
webots/: CMakeLists.txt  LICENSE
webots-docker/: Dockerfile  dependencies.sh  docker-config.py  entrypoint.sh  webots-config.py
webots/controllers/collect_vision_data/: CMakeLists.txt
webots/controllers/nugus_controller/: nugus_controller.cpp
webots/controllers/teleport_master_controller/: teleport_master_controller.cpp
webots/dependencies/: Makefile.linux
webots/docs/: list.txt
webots/lib/webots/: libHalf.so.24  libIex-2_3.so.24  libIexMath-2_3.so.24  libIlmImf-2_3.so.24  libIlmThread-2_3.so.24  libQt6Concurrent.so.6.2.3  libQt6DBus.so.6  libQt6Network.so.6.2.3  libQt6OpenGLWidgets.so.6  libQt6PrintSupport.so.6.2.3  libQt6WebSockets.so.6.2.3  libQt6XcbQpa.so.6  libQt6Xml.so.6.2.3  libfreetype.so.6  (+5 more)
webots/resources/: proto-list.xml
webots/scripts/: b.py
worlds/: 1v1.wbt  4v4.wbt  kid.wbt  nuoptimiser.wbt  robocup_nuoptim.wbt  soccer.wbt  vision_collection.wbt  voronoi.json  voronoi.wbt
(+1238 files in other folders)
